[package]
name = "counter"
description = "Cosmwasm counter dapp, with permissions for testing Osmosis wasmhooks"
version = "0.1.0"
authors = ["osmosis contributors"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code:Z \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.17.0
"""

[dependencies]
cosmwasm-schema = { version = "2.2.0" }
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_2_1",
  "stargate",
  "std",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.22"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18" }

[dev-dependencies]
cw-multi-test = "2.5.1"
