[package]
name = "rate-limiter"
version = "0.1.0"
authors = ["Nicolas Lara <nicolaslara@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
library = []

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code:Z \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.17.0
"""
optimize-arm = """docker run --rm -v "$(pwd)":/code:Z \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.17.0
"""

[dependencies]
cosmwasm-schema = { version = "2.2.0" }
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_2_1",
  "stargate",
  "std",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
provwasm-std = { version = "2.8.0", features = ["cosmos-base"] }
schemars = { version = "0.8.22", features = ["derive"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18" }
sha2 = { version = "0.10.6", features = ["sha2-asm"] }
hex = { version = "0.4.3", features = ["serde"] }

[dev-dependencies]
cw-multi-test = "2.5.1"
provwasm-mocks = { version = "2.8.0" }
serde-json-wasm = "1.0.1"
