[package]
name = "rate-limiter"
version = "0.1.0"
authors = ["Nicolas Lara <nicolaslara@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""
optimize-arm = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.14.0
"""

[dependencies]
provwasm-std = { version = "2.0.0" }
cosmwasm-schema = "1.2.5"
cosmwasm-std = { version = "1.2.5", features = ["stargate", "cosmwasm_1_1"] }
cosmwasm-storage = "1.2.5"
cw-storage-plus = { version = "1.0.1", features = ["iterator"] }
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
sha2 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "0.17.0"
provwasm-mocks = { version = "2.0.0" }
serde-json-wasm = "1.0.0"
